# python-aws-cdk-serverless

./: .gitignore  README.md
app/: Dockerfile  alembic.ini  app.py  docker-compose.yml  pyproject.toml  run_migration.py  tasks.py
app/api/v1/: api.py
app/core/: __init__.py  config.py
app/db/: __init__.py  models.py
app/migrations/: env.py
app/migrations/versions/: c1d4a5acde46_init_tables.py
provisioning/: app.py  pyproject.toml
